--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/urbanist": "^5.0.20",
+    "@gsap/react": "^2.1.2",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "bootstrap": "^5.3.3",
+    "gsap": "^3.12.7",
+    "lenis": "^1.1.14-dev.5",
+    "motion": "^12.6.2",
     "next": "14.2.4",
     "react": "^18",
     "react-bootstrap": "^2.10.3",
